--- a/internship.html
+++ b/internship.html
@@ -41,6 +41,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.jobvite.com/bankerstoolbox/job/ocJDafws'>Abrigo Careers - Marketing Intern</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qWGaVfwr&k=Job&j=ookn9fwY&__jvst=Employee+Referral&__jvsd=soNIKhwp&__jvsc=Twitter&bid=n2GOVLwH'>Selina Careers - Hospitality Operations (Internship Opportunity)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-26</p>
@@ -54,19 +58,19 @@
 <p>Posted on: 2019-07-26</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/lilium/jobs/1762696'>Job Application for Intern Production System, New Factory Planning & Simulation at Lilium</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Munich</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/lilium/jobs/1772242'>Job Application for Intern Digital Production at Lilium</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<h5><a href='https://boards.greenhouse.io/lilium/jobs/1772242'>Job Application for Intern Digital Production at Lilium</a></h5> 
+<p><span class="badge badge-light">Munich</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
 <h5><a href='https://jobs.jobvite.com/universalmusicgroup/job/odsEafwd'>Universal Music Group Careers - Fall Internship, Digital Strategic Marketing & Technology- Santa Monica</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Santa Monica</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
 <h5><a href='https://jobs.jobvite.com/universalmusicgroup/job/ooZEafwV'>Universal Music Group Careers - Fall Internship, Business & Legal Affairs- Los Angeles</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Los Angeles</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
 <h5><a href='https://adomik.workable.com/j/949E2460D4'>Adomik - Jobs: Business Analyst, Internship (M/F) - Apply online</a></h5> 
@@ -125,7 +129,7 @@
 <p><span class="badge badge-light">California, United States</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://stantec.referrals.selectminds.com/jobs/engineering-intern-transportation-6006'>Engineering Intern, Transportation - Stantec Careers</a></h5> 
+<h5><a href='https://stantec.referrals.selectminds.com/jobs/engineering-intern-transportation-6006'>Engineering Intern, Transportation - Stantec Careers</a></h5> 
 <p><span class="badge badge-light">Ottawa, Ontario</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -167,7 +171,7 @@
 <p><span class="badge badge-light">Singapore Malaysia Philippines Hong Kong Taiwan</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://zalora.applytojob.com/apply/DyAKF6FC4O/Intern-Vendor-Management'>Intern - Vendor Management - ZALORA SEA - Career Page</a></h5> 
+<h5><a href='http://zalora.applytojob.com/apply/DyAKF6FC4O/Intern-Vendor-Management'>Intern - Vendor Management - ZALORA SEA - Career Page</a></h5> 
 <p><span class="badge badge-light">Singapore Malaysia Philippines Hong Kong Taiwan</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -179,7 +183,7 @@
 <p><span class="badge badge-light">Karnataka, India</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jacksonspalding.applytojob.com/apply/yZzeQQcAfu/PostGrad-Intern-Public-Relations-Account-Coordinator'>Post-Grad Intern - Public Relations Account Coordinator - Jackson Spalding - Career Page</a></h5> 
+<h5><a href='http://jacksonspalding.applytojob.com/apply/yZzeQQcAfu/PostGrad-Intern-Public-Relations-Account-Coordinator'>Post-Grad Intern - Public Relations Account Coordinator - Jackson Spalding - Career Page</a></h5> 
 <p><span class="badge badge-light">Atlanta</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -213,7 +217,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/vimpelcom/b81e42cf-bf89-4828-b553-e716a3714887'>VEON - Internship ES BSD</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/vimpelcom/b81e42cf-bf89-4828-b553-e716a3714887'>VEON - Internship ES BSD</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -243,7 +247,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/bayada/jobs/4364870002'>Job Application for Intern - Assistive Care State Programs at BAYADA Home Health Care</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/bayada/jobs/4364870002'>Job Application for Intern - Assistive Care State Programs at BAYADA Home Health Care</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -313,7 +317,7 @@ that?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://colorfy.join.com/jobs/260664-marketing-intern-f-m'>Job @ colorfy (Berlin): Marketing Intern (f/m) | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://colorfy.join.com/jobs/260664-marketing-intern-f-m'>Job @ colorfy (Berlin): Marketing Intern (f/m) | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -329,7 +333,7 @@ that?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/waveapps/87383c38-68ad-4518-a71f-69a0d18ce820'>Wave Financial - Intern, Finance and Accounting</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/waveapps/87383c38-68ad-4518-a71f-69a0d18ce820'>Wave Financial - Intern, Finance and Accounting</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -403,7 +407,7 @@ that?...</p>
 <p><span class="badge badge-light">California, United States</span></p>
 <p>Posted on:: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.peopleclick.com/careerscp/client_arm/external/jobDetails.do?functionName=getJobDetail&jobPostId=42878&localeCode=en-us'>Intern, Design Verification Engineering (Fall 2019) - Austin TX ... - ARM</a></h5> 
+<h5><a href='https://careers.peopleclick.com/careerscp/client_arm/external/jobDetails.do?functionName=getJobDetail&jobPostId=42878&localeCode=en-us'>Intern, Design Verification Engineering (Fall 2019) - Austin TX ... - ARM</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... What will I be accountable for? As a Design Verification Engineer Intern, you 
 would be accountable for verification of one or more functional blocks at the unit 
@@ -474,10 +478,6 @@ learning?...</p>
 <h5><a href='https://lumc.recruitee.com/l/nl/o/internistouderengeneeskunde-opname-en-herstel-afdeling-b19mbeo69'>
       Internist-ouderengeneeskunde Opname en Herstel afdeling (B.19.MB.EO.69) - LUMC
     </a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-25</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Netatmo/743999692189123-internship-project-product-manager'>Netatmo INTERNSHIP - Project & Product Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
